--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,18 +11,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
           node-version: '18'
 
-      # Server dependencies + type check
-      - run: npm install
-      - run: npx tsc --noEmit
+      - name: Install server dependencies
+        run: npm install
 
-      # Frontend (React) dependencies + type check
+      - name: Type check server
+        run: npx tsc --noEmit
+
       - name: Install client dependencies
-        run: |
-          cd client
-          npm install
-          npx tsc --noEmit
+        working-directory: client
+        run: npm install
+
+      - name: Type check client
+        working-directory: client
+        run: npx tsc --noEmit
