--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,6 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,6 +42,7 @@
     "@types/axios": "^0.14.4",
     "@types/jest": "^29.5.14",
     "@types/node": "^24.0.1",
-    "@types/react": "^19.1.8"
+    "@types/react": "^19.1.8",
+    "typescript": "^5.8.3"
   }
 }
