Fix: use tsconfig.build.json in CI and clean up types

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,4 +30,4 @@ jobs:
 
       - name: Type check client
         working-directory: client
-        run: npx tsc --noEmit
+        run: npx tsc --project tsconfig.build.json --noEmit
