--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -17,5 +17,5 @@
     "jsx": "react-jsx"
   },
   "include": ["src"],
-  "exclude": ["node_modules", "build", "dist"]
+  "exclude": ["src/App.test.tsx"]
 }
